k8s/deployment-kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: oficina-mecanica

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kafka-ui

  template:
    metadata:
      labels:
        app: kafka-ui

    spec:
      containers:
        - name: kafka-ui

          image: provectuslabs/kafka-ui:latest

          ports:
            - containerPort: 8080
