k8s/deployment-mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: oficina-mecanica

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mailpit

  template:
    metadata:
      labels:
        app: mailpit

    spec:
      containers:
        - name: mailpit

          image: axllent/mailpit:latest

          ports:
            - containerPort: 1025

            - containerPort: 8025
