k8s/deployment-monolito.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-backend
  namespace: oficina-mecanica
spec:
  replicas: 1

  selector:
    matchLabels:
      app: workshop-backend
  template:
    metadata:
      labels:
        app: workshop-backend

    spec:
      containers:
        - name: workshop-backend
          image: 450853758184.dkr.ecr.us-east-1.amazonaws.com/registry-oficina-mecanica-mnl:9cb360110d8d35953a314f4b2bd2dd9285bf9d2c

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: otel-agent
              mountPath: /otel

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
              ephemeral-storage: "128Mi"

            limits:
              cpu: "600m"
              memory: "768Mi"
              ephemeral-storage: "256Mi"

          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8080 }
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8080 }
            initialDelaySeconds: 15
            periodSeconds: 5

          startupProbe:
            httpGet: { path: /actuator/health/liveness, port: 8080 }
            failureThreshold: 30
            periodSeconds: 5

      volumes:
        - name: otel-agent
          emptyDir: {}
