k8s/deployment-ms-orcamentos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-orcamentos
  namespace: oficina-mecanica

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ms-orcamentos

  template:
    metadata:
      labels:
        app: ms-orcamentos

    spec:
      containers:
        - name: ms-orcamentos
          image: 450853758184.dkr.ecr.us-east-1.amazonaws.com/registry-oficina-mecanica-ms-orcamentos:4897629cf3c41b78e3627fe4fb32ff145312eb14
          
          ports:
            - containerPort: 8081

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
              ephemeral-storage: "128Mi"

            limits:
              cpu: "600m"
              memory: "768Mi"
              ephemeral-storage: "256Mi"
