k8s/service-kafka-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
  namespace: oficina-mecanica

spec:
  selector:
    app: kafka-ui

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
