k8s/service-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: oficina-mecanica

spec:
  selector:
    app: kafka

  ports:
    - name: broker
      port: 29092
      targetPort: 29092

    - name: controller
      port: 29093
      targetPort: 29093

  type: ClusterIP
