k8s/service-mailpit.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit-service
  namespace: oficina-mecanica

spec:
  selector:
    app: mailpit

  ports:
    - name: smtp
      port: 1025
      targetPort: 1025

    - name: web
      port: 8025
      targetPort: 8025

  type: ClusterIP
