k8s/service-monolito.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-backend-service
  namespace: oficina-mecanica
  labels:
    app: workshop-backend
spec:
  selector:
    app: workshop-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http

  type: ClusterIP
