k8s/service-ms-orcamentos.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-orcamentos-service
  namespace: oficina-mecanica

spec:
  selector:
    app: ms-orcamentos

  ports:
    - port: 8081
      targetPort: 8081

  type: ClusterIP
