k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-backend-ingress
  namespace: oficina-mecanica
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb

  rules:
    - http:
        paths:

          # Monolito
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workshop-backend-service
                port:
                  number: 80

          # Kafka UI
          - path: /kafka-ui
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-service
                port:
                  number: 8080
